Fix nav spacing

--- a/assets/css/codeforiati.scss
+++ b/assets/css/codeforiati.scss
@@ -21,7 +21,6 @@ blockquote {
 
 /* Custom page header */
 .header {
-  padding-bottom: 1rem;
   border-bottom: .05rem solid #e5e5e5;
 
   /* Make the masthead heading the same height as the navigation */
